--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,7 @@
 
 .shield {
   transform: scale(3);
+  z-index: -1;
 }
 
 .title {
@@ -22,4 +23,9 @@
   margin: 40px 0;
   width: 50%;
   border-radius: 50px;
+}
+
+.tl .tr .bl .br {
+  width: 24px;
+  height: 24px;
 }
